# physarum-biocomputer

./: .gitignore  README.md
adaptors/1x1-adaptor/: 1x1-adaptor.kicad_pcb  1x1-adaptor.kicad_sch
adaptors/4x1-adaptor/: 4x1-adaptor.kicad_pcb  4x1-adaptor.kicad_pro  4x1-adaptor.kicad_sch
adaptors/8x1-adaptor/: 8x1-adaptor.kicad_pcb  8x1-adaptor.kicad_pro  8x1-adaptor.kicad_sch
adaptors/card-full/: card-full.kicad_pcb  card-full.kicad_pro  card-full.kicad_sch
adaptors/card-half/: card-half.kicad_pcb  card-half.kicad_prl  card-half.kicad_pro  card-half.kicad_sch
adaptors/configurable-adaptor/: configurable-adaptor.kicad_pcb  configurable-adaptor.kicad_prl  configurable-adaptor.kicad_pro  configurable-adaptor.kicad_sch
adaptors/standard-adaptor/: fp-lib-table  neurophy-adaptor.kicad_pcb  neurophy-adaptor.kicad_pro  neurophy-adaptor.kicad_sch
data/device-sweep-recordings/: resistor-baseline-sweep.csv
data/noise-recordings/: adc-noise-recordings.csv
simulation/: rc_simulation.py
simulations/: equivalent_circuit_simulation.py
software/: Cargo.toml  README.md
software/examples/characterization/: main.rs
software/examples/eis/: main.rs
software/examples/pulse-response/: main.rs
software/examples/regression/: main.rs
software/examples/reservoir/digit-classification/: classification.py  main.rs
software/examples/reservoir/temporal-xor/: main.rs
software/examples/reservoir/van-der-pol/: main.rs
software/src/drivers/: adc.rs  dac.rs  mod.rs  selector.rs
software/src/linalg/: array.rs
software/src/random/: distribution.rs  mod.rs
(+358 files in other folders)
